# cpp_vk2023

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  DockerFile  Makefile  README.md  download_dump.sh  memtest.sh  run_linters.sh  run_tests.sh  start.sh
.github/workflows/: ci.yml
project/: CMakeLists.txt
project/include/: exceptions.h  exeption.h  pars_input.h  pars_movies.h  utils.h
project/lib_calculator/: CMakeLists.txt
project/lib_calculator/include/: calculator.h  exception.h  pars_expression.h
project/lib_calculator/src/: calculator.cpp  pars_expression.cpp
project/src/: main.cpp  pars_input.cpp  pars_movies.cpp
project/tests/: CMakeLists.txt
project/tests/data/test_correct_1/: testtitle.akas_1.tsv  testtitle.basics_1.tsv  testtitle.ratings_1.tsv
project/tests/data/test_correct_2/: testtitle.akas_1.tsv  testtitle.basics_1.tsv  testtitle.ratings_1.tsv
project/tests/data/test_except_1/: testtitle.basics_1.tsv
project/tests/include/: utils.h
project/tests/src/: base_tests.cpp  main.cpp  test.cpp  test_base.cpp
